src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Asset_Class_Geography__c</fullName>
        <description>Do not delete..Used for Product search</description>
        <label>Asset Class-Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Emerging Markets (diversified) Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets (diversified) Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Alternatives/Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Balanced/Multi-Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global ex US Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Country - Non US Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Alternatives/Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Balanced/Multi-Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Fixed Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <description>An asset class is a group of securities that exhibit similar characteristics, behave similarly in the marketplace, and are subject to the same laws and regulation.</description>
        <inlineHelpText>This field will contain a group of securities that exhibit similar characteristics, behave similarly in the marketplace, and are subject to the same laws and regulation</inlineHelpText>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Alternatives/Speciality </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced/Multi-Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Class_by_Geography__c</fullName>
        <formula>(TEXT((Geography__c)))&amp;&quot; &quot;&amp;(TEXT(Asset_Class__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class - Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <label>Auditor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blended__c</fullName>
        <formula>CONTAINS(UPPER(Name) ,&apos;BLENDED&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if an existing product is not accepting new investments.</description>
        <label>Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custodian_Name__c</fullName>
        <label>Custodian Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount based on set values</description>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distribution_Composite__c</fullName>
        <label>Distribution Composite</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Emerging Markets ex India Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia ex Japan Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific Equity ex Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset-Backed Structured Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research 130/30 - All Country Global Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research 130/30 US Core Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - Emerging Markets Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - European Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - Focused Global Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - Focused US Core Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - Global Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - Global High Dividend Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research Global - Non Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - International Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - Large Cap Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - Large Cap Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research Mid Cap Core Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research Small Cap Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - US Core (ESG) Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - US Core Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blended Research - US Core Equity Broad Universe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California Insured Municipal Closed End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMBS (U.S.) Fixed Annuity Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateralized Loan Obligation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservative Equity</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domicile__c</fullName>
        <description>The country where the fund is registered</description>
        <inlineHelpText>This field will contain the country where the fund is registered.</inlineHelpText>
        <label>Domicile</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Emerging Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global ex US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Country - Non US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets (diversified)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_High_Interest_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is High Interest Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is used to track unknown strategy</description>
        <label>Is Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Valid_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large/Multi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small / Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small/Mid</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Start_Date__c</fullName>
        <inlineHelpText>First day of change in performance</inlineHelpText>
        <label>Performance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio_Code__c</fullName>
        <description>The unique three character acronym assigned to the portfolio.</description>
        <externalId>true</externalId>
        <inlineHelpText>This will field will contain unique three character acronym assigned to the portfolio.</inlineHelpText>
        <label>Portfolio Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portfolio_End_Date__c</fullName>
        <label>Portfolio End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio_Start_Date__c</fullName>
        <label>Portfolio Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Link__c</fullName>
        <formula>IF(ISPICKVAL(Vehicle__c , &apos;Australia Unit Trust&apos;) , 
HYPERLINK(&quot;https://www.mfs.com/wps/portal/mfs/insti/australia-nz-updates-and-products/wholesale-trust-daily-navs-and-pricing?clearPortletSession=true&quot;,&apos;Australia Unit Trust&apos;), 
IF(ISPICKVAL(Vehicle__c , &apos;PPS&apos;) , 
HYPERLINK(&quot;http://www.mfs.com/wps/portal/mfs/us-advisor-pub/products/separate-accounts/?portCode=&quot;&amp;Portfolio_Code__c&amp;&quot;&amp;viewMode=profileSummary&quot;,&apos;Separately Managed Accounts (SMA)&apos;), 
IF(ISPICKVAL(Vehicle__c , &apos;Meridian&apos;) , 
HYPERLINK(&quot;https://www.mfs.com/wps/portal/mfs/non-us-investor/products/meridian-funds/?portCode=&quot;&amp; Portfolio_Code__c&amp;&quot;&amp;viewMode=profileSummary&quot;,&apos;Meridian Funds&apos;), 
IF(ISPICKVAL(Vehicle__c , &apos;VIT&apos;), HYPERLINK(&quot;http://www.mfs.com/wps/portal/mfs/us-advisor-pub/products/variable-insurance/?portCode=&quot;&amp;Portfolio_Code__c&amp;&quot;&amp;viewMode=profileSummary&quot;, 
&apos;VIT I Funds&apos;), 
IF(ISPICKVAL(Vehicle__c , &apos;VIT II&apos;), HYPERLINK(&quot;http://www.mfs.com/wps/portal/mfs/us-advisor-pub/products/variable-insurance/?portCode=&quot;&amp;Portfolio_Code__c&amp;&quot;&amp;viewMode=profileSummary&quot;, 
&apos;VIT II Funds&apos;), 
IF(ISPICKVAL(Vehicle__c , &apos;VIT III&apos;), HYPERLINK(&quot;http://www.mfs.com/wps/portal/mfs/us-advisor-pub/products/variable-insurance/?portCode=&quot;&amp;Portfolio_Code__c&amp;&quot;&amp;viewMode=profileSummary&quot;, 
&apos;VIT III Funds&apos;), 
IF(ISPICKVAL(Vehicle__c , &apos;MFS Family of Funds (US)&apos;) , 
HYPERLINK(&quot;http://www.mfs.com/wps/portal/mfs/us-advisor-pub/products/mutual-funds/?portCode=&quot;&amp;Portfolio_Code__c&amp;&quot;&amp;viewMode=profileSummary &quot;,&apos;US Retail&apos;),&apos;&apos; 
) ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Record_Type__c</fullName>
        <formula>IF(  RecordType.DeveloperName =&apos;Portfolio&apos;, &apos;2.Portfolio&apos;,&apos;1.Strategy&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Tier__c</fullName>
        <label>Product Tier</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Name__c</fullName>
        <label>Reporting Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if the product can be seen but cannot be sold yet.

OLD: &quot;Portfolio Active Status: Indicates whether a portfolio is Active or Inactive. The status of the portfolio is Active when the fund has assets or is being prepared for funding. The status of the portfolio is Inactive after the termination date. and/or
Portfolio Open Ended Flag: A flag on the portfolio that indicates if it is open or closed ended. When the fund is open ended, shares are created for investor purchase and taken out of circulation for redemption. When the fund is closed ended, a specified number of shares are available for investor purchase.&quot;</description>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restriction_Reason__c</fullName>
        <description>The reason why the fund has been restricted</description>
        <label>Restriction Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <externalId>true</externalId>
        <label>Saleslogix ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Strategies</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <description>The overarching strategy or theory used by either a retail investor or an institutional money manager to set asset allocation and choose individual securities for investment. For example, core, value, growth, etc.</description>
        <inlineHelpText>This field will contain overarching strategy or theory used by either a retail investor or an institutional money manager to set asset allocation and choose individual securities for investment. For example, core, value, growth, etc.</inlineHelpText>
        <label>Style</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core/Multi FI Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core (FI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Markets (FI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund of Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global (FI - SUB only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Yield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Maturity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Eq Style</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Eq Style/Multi FI Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi FI Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Securitized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Securitized / Other</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Frame__c</fullName>
        <label>Time Frame</label>
        <picklist>
            <picklistValues>
                <fullName>0-3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-9 months</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <picklist>
            <picklistValues>
                <fullName>Alternative Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia Unit Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman CFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collective Investment Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Family of Funds (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Investment Funds (FCP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subadvised Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIT III</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllNotValidProduct</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Portfolio_Code__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Restricted__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>Is_Valid_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Valid_Product__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>AllNotValidProduct</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllPortfoliosNew</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Portfolio_Code__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>Asset_Class__c</columns>
        <columns>Geography__c</columns>
        <columns>Asset_Class_Geography__c</columns>
        <columns>Market_Cap__c</columns>
        <columns>Style__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Distribution_Composite__c</columns>
        <columns>Is_Valid_Product__c</columns>
        <columns>Strategy__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Portfolio</value>
        </filters>
        <filters>
            <field>Is_Valid_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AllPortfolioNew</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Portfolio_Code__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Restricted__c</columns>
        <columns>Strategy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Strategy</value>
        </filters>
        <filters>
            <field>Vehicle__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Strategies</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllProductsWCode</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Vehicle__c</columns>
        <columns>Restricted__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>Portfolio_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Portfolio_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Strategies w code</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllStrategiesNew</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Portfolio_Code__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>Asset_Class__c</columns>
        <columns>Geography__c</columns>
        <columns>Asset_Class_Geography__c</columns>
        <columns>Market_Cap__c</columns>
        <columns>Style__c</columns>
        <columns>Vehicle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Strategy</value>
        </filters>
        <filters>
            <field>Is_Valid_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Strategies New</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Strategies</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Portfolio_Code__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>Vehicle__c</columns>
        <columns>Distribution_Composite__c</columns>
        <columns>Geography__c</columns>
        <columns>Strategy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/22/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Strategy</value>
        </filters>
        <label>New Strategies</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Portfolio</fullName>
        <active>true</active>
        <label>Portfolio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategy</fullName>
        <active>true</active>
        <label>Strategy</label>
    </recordTypes>
</CustomObject>